--- a/code-along.css
+++ b/code-along.css
@@ -7,6 +7,8 @@
   width: 20%;
   margin: auto;
   display: inline-block;
+  transform:translate(150px)
+  opacity:0.5;
 }
 
 /****************************************
@@ -22,7 +24,7 @@
 }
 
 .transition-demo img:hover {
-
+filter:none;
 }
 
 /****************************************
